add google analytics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,4 +28,5 @@
 
  <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 
+  {% include _google-analytics.html %}
 <! -- header.html end -->
