--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="tr">
-
+<html lang="pt-br">
+  <link rel="shortcut icon" href="http://cmotta.github.io/assets/media/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="http://cmotta.github.io/assets/media/favicon.ico" type="image/x-icon">
 {% include header.html %}
 
    <body>
