rich snippets tryout

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
   <link rel="shortcut icon" href="http://cmotta.github.io/assets/media/favicon.ico" type="image/x-icon">
   <link rel="icon" href="http://cmotta.github.io/assets/media/favicon.ico" type="image/x-icon">
-{% include header.html %}
+  <link rel="author" href="https://plus.google.com/+CaioMottaLS">
+  {% include header.html %}
 
    <body>
    		<nav class="navbar navbar-default visible-xs" role="navigation">
